--- a/index.html
+++ b/index.html
@@ -1,1 +1,196 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Максим & Дарья — 06.06.2026</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;500;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+background:#000;
+color:#d4af37;
+font-family:'Cormorant Garamond',serif;
+scroll-behavior:smooth;
+overflow-x:hidden;
+}
+section{
+min-height:100vh;
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+text-align:center;
+padding:40px 20px;
+}
+h1{font-size:60px;letter-spacing:4px}
+h2{font-size:40px;margin-bottom:20px}
+p{max-width:700px;font-size:22px;line-height:1.6;color:#eee}
+button{
+margin-top:30px;
+padding:12px 30px;
+border:1px solid #d4af37;
+background:transparent;
+color:#d4af37;
+font-size:18px;
+cursor:pointer;
+transition:0.4s;
+}
+button:hover{
+background:#d4af37;
+color:#000;
+}
+.hero{
+background:url("PHOTO1.jpg") center/cover no-repeat;
+position:relative;
+}
+.hero::after{
+content:"";
+position:absolute;
+top:0;left:0;
+width:100%;height:100%;
+background:rgba(0,0,0,0.6);
+}
+.hero-content{
+position:relative;
+z-index:2;
+animation:fadeIn 2s ease forwards;
+}
+@keyframes fadeIn{
+from{opacity:0;transform:translateY(30px)}
+to{opacity:1;transform:translateY(0)}
+}
+.countdown{
+display:flex;
+gap:30px;
+margin-top:30px;
+flex-wrap:wrap;
+}
+.time-box{
+font-size:28px;
+}
+.location{
+background:url("PHOTO2.jpg") center/cover no-repeat;
+position:relative;
+}
+.location::after{
+content:"";
+position:absolute;
+top:0;left:0;
+width:100%;height:100%;
+background:rgba(0,0,0,0.75);
+}
+.location-content{
+position:relative;
+z-index:2;
+}
+form{
+margin-top:30px;
+display:flex;
+flex-direction:column;
+gap:15px;
+width:300px;
+}
+input,select{
+padding:10px;
+border:none;
+outline:none;
+}
+footer{
+padding:40px;
+text-align:center;
+color:#777;
+}
+</style>
+</head>
+
+<body>
+
+<section class="hero">
+<div class="hero-content">
+<h1>Максим & Дарья</h1>
+<p>06 июня 2026 • Одесса</p>
+<button onclick="document.getElementById('invite').scrollIntoView()">Открыть приглашение</button>
+</div>
+</section>
+
+<section id="invite">
+<h2>С любовью приглашаем</h2>
+<p>
+С трепетом в сердце и огромной любовью  
+мы приглашаем вас разделить с нами самый важный день нашей жизни.  
+6 июня 2026 года в 19:00  
+мы станем семьёй и будем счастливы видеть вас рядом.
+</p>
+</section>
+
+<section>
+<h2>До нашей свадьбы осталось</h2>
+<div class="countdown" id="countdown">
+<div class="time-box"><span id="days"></span><br>Дней</div>
+<div class="time-box"><span id="hours"></span><br>Часов</div>
+<div class="time-box"><span id="minutes"></span><br>Минут</div>
+<div class="time-box"><span id="seconds"></span><br>Секунд</div>
+</div>
+</section>
+
+<section class="location">
+<div class="location-content">
+<h2>Место проведения</h2>
+<p>
+Ресторан «У бабушки»  
+г. Одесса  
+Начало в 19:00
+</p>
+</div>
+</section>
+
+<section>
+<h2>Дресс-код</h2>
+<p>
+Мы будем искренне признательны, если вы поддержите атмосферу вечера классическим стилем.  
+Для дам — элегантные вечерние платья в благородных оттенках.  
+Для джентльменов — классические костюмы или смокинги в тёмной гамме.  
+Создадим атмосферу роскоши и утончённости вместе.
+</p>
+</section>
+
+<section>
+<h2>Подтвердите присутствие</h2>
+<button onclick="window.location.href='ВАША_ССЫЛКА_GOOGLE_FORMS'">
+Перейти к подтверждению
+</button>
+</section>
+
+<footer>
+Максим & Дарья • 06.06.2026
+</footer>
+
+<script>
+const weddingDate = new Date("June 6, 2026 19:00:00").getTime();
+const timer = setInterval(function(){
+const now = new Date().getTime();
+const distance = weddingDate - now;
+
+const days = Math.floor(distance/(1000*60*60*24));
+const hours = Math.floor((distance%(1000*60*60*24))/(1000*60*60));
+const minutes = Math.floor((distance%(1000*60*60))/(1000*60));
+const seconds = Math.floor((distance%(1000*60))/1000);
+
+document.getElementById("days").innerHTML=days;
+document.getElementById("hours").innerHTML=hours;
+document.getElementById("minutes").innerHTML=minutes;
+document.getElementById("seconds").innerHTML=seconds;
+
+if(distance<0){
+clearInterval(timer);
+document.getElementById("countdown").innerHTML="Этот день настал 💍";
+}
+},1000);
+</script>
+
+</body>
+</html>
 
