--- a/index.html
+++ b/index.html
@@ -18,14 +18,78 @@ scroll-behavior:smooth;
 overflow-x:hidden;
 }
 
-/* ✨ Золотой узорный фон */
+/* ================== 💌 ENVELOPE ================== */
+
+#envelopeScreen{
+position:fixed;
+width:100%;
+height:100%;
+background:#000;
+display:flex;
+justify-content:center;
+align-items:center;
+z-index:9999;
+transition:1s;
+}
+
+.envelope{
+position:relative;
+width:320px;
+height:200px;
+cursor:pointer;
+perspective:1000px;
+}
+
+.envelope-body{
+position:absolute;
+width:100%;
+height:100%;
+background:#111;
+border:1px solid #d4af37;
+}
+
+.flap{
+position:absolute;
+top:0;
+width:100%;
+height:100px;
+background:#111;
+border:1px solid #d4af37;
+transform-origin:top;
+transition:1s;
+}
+
+.letter{
+position:absolute;
+width:90%;
+height:90%;
+background:#000;
+top:5%;
+left:5%;
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+text-align:center;
+border:1px solid #d4af37;
+padding:20px;
+color:#d4af37;
+}
+
+.envelope.open .flap{
+transform:rotateX(180deg);
+}
+
+/* ================== ✨ BACKGROUND PATTERN ================== */
+
 section:not(.hero):not(.location){
 background:
 radial-gradient(circle at 20% 30%, rgba(212,175,55,0.08) 0%, transparent 60%),
 radial-gradient(circle at 80% 70%, rgba(212,175,55,0.08) 0%, transparent 60%),
 linear-gradient(#000,#000);
-position:relative;
 }
+
+/* ================== GENERAL ================== */
 
 section{
 min-height:100vh;
@@ -57,6 +121,8 @@ background:#d4af37;
 color:#000;
 }
 
+/* ================== HERO ================== */
+
 .hero{
 background:url("PHOTO1.jpg") center/cover no-repeat;
 position:relative;
@@ -83,16 +149,30 @@ from{opacity:0;transform:translateY(30px)}
 to{opacity:1;transform:translateY(0)}
 }
 
-.countdown{
+/* ================== 📅 CALENDAR COUNTDOWN ================== */
+
+.calendar{
 display:flex;
-gap:30px;
-margin-top:30px;
+gap:20px;
 flex-wrap:wrap;
+justify-content:center;
+margin-top:30px;
 }
 
-.time-box{
-font-size:28px;
+.calendar-box{
+width:120px;
+border:1px solid #d4af37;
+padding:15px;
+background:#111;
 }
+
+.calendar-box span{
+font-size:36px;
+display:block;
+color:#fff;
+}
+
+/* ================== LOCATION ================== */
 
 .location{
 background:url("PHOTO2.jpg") center/cover no-repeat;
@@ -109,7 +189,20 @@ color:#777;
 
 <body>
 
-<!-- 🎵 Фоновая музыка -->
+<!-- 💌 ENVELOPE -->
+<div id="envelopeScreen">
+  <div class="envelope" onclick="openEnvelope()">
+    <div class="flap"></div>
+    <div class="envelope-body"></div>
+    <div class="letter">
+      <h2>Максим & Дарья</h2>
+      <p>06 июня 2026</p>
+      <small>Нажмите, чтобы открыть</small>
+    </div>
+  </div>
+</div>
+
+<!-- 🎵 MUSIC -->
 <audio id="bgMusic" loop>
 <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c8c8a73467.mp3?filename=wedding-piano-110624.mp3" type="audio/mpeg">
 </audio>
@@ -118,29 +211,25 @@ color:#777;
 <div class="hero-content">
 <h1>Максим & Дарья</h1>
 <p>06 июня 2026 • Одесса</p>
-<button onclick="startMusic(); document.getElementById('invite').scrollIntoView()">
-Открыть приглашение
-</button>
 </div>
 </section>
 
-<section id="invite">
+<section>
 <h2>С любовью приглашаем</h2>
 <p>
 С трепетом в сердце и огромной любовью  
 мы приглашаем вас разделить с нами самый важный день нашей жизни.  
-6 июня 2026 года в 19:00  
-мы станем семьёй и будем счастливы видеть вас рядом.
+6 июня 2026 года в 19:00мы станем семьёй и будем счастливы видеть вас рядом.
 </p>
 </section>
 
 <section>
 <h2>До нашей свадьбы осталось</h2>
-<div class="countdown" id="countdown">
-<div class="time-box"><span id="days"></span><br>Дней</div>
-<div class="time-box"><span id="hours"></span><br>Часов</div>
-<div class="time-box"><span id="minutes"></span><br>Минут</div>
-<div class="time-box"><span id="seconds"></span><br>Секунд</div>
+<div class="calendar">
+<div class="calendar-box"><span id="days"></span>Дней</div>
+<div class="calendar-box"><span id="hours"></span>Часов</div>
+<div class="calendar-box"><span id="minutes"></span>Минут</div>
+<div class="calendar-box"><span id="seconds"></span>Секунд</div>
 </div>
 </section>
 
@@ -158,16 +247,14 @@ color:#777;
 <section>
 <h2>Дресс-код</h2>
 <p>
-Мы будем искренне признательны, если вы поддержите атмосферу вечера классическим стилем.  
-Для дам — элегантные вечерние платья в благородных оттенках.  
-Для джентльменов — классические костюмы или смокинги в тёмной гамме.  
-Создадим атмосферу роскоши и утончённости вместе.
+Для дам — вечерние платья в благородных оттенках.  
+Для джентльменов — классические костюмы или смокинги.
 </p>
 </section>
 
 <section>
 <h2>Подтвердите присутствие</h2>
-<button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScur5szpMVi-y6N-c0YRXQEpkw_ZK3IDu4pFglyk1Bv99c1EQ/viewform?usp=header'">
+<button onclick="window.location.href='ВАША_ССЫЛКА_GOOGLE_FORMS'">
 Перейти к подтверждению
 </button>
 </section>
@@ -177,7 +264,15 @@ color:#777;
 </footer>
 
 <script>
-function startMusic(){
+function openEnvelope(){
+document.querySelector(".envelope").classList.add("open");
+setTimeout(()=>{
+document.getElementById("envelopeScreen").style.opacity="0";
+setTimeout(()=>{
+document.getElementById("envelopeScreen").style.display="none";
+},1000);
+},1000);
+
 const music = document.getElementById("bgMusic");
 music.volume = 0.4;
 music.play();
@@ -185,7 +280,7 @@ music.play();
 
 const weddingDate = new Date("June 6, 2026 19:00:00").getTime();
 
-const timer = setInterval(function(){
+setInterval(function(){
 const now = new Date().getTime();
 const distance = weddingDate - now;
 
@@ -198,15 +293,9 @@ document.getElementById("days").innerHTML=days;
 document.getElementById("hours").innerHTML=hours;
 document.getElementById("minutes").innerHTML=minutes;
 document.getElementById("seconds").innerHTML=seconds;
-
-if(distance<0){
-clearInterval(timer);
-document.getElementById("countdown").innerHTML="Этот день настал 💍";
-}
 },1000);
 </script>
 
 </body>
 </html>
-
 
