--- a/index.html
+++ b/index.html
@@ -3,229 +3,102 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Максим & Дарья — 06.06.2026</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;600;700&display=swap" rel="stylesheet">
+<title>Свадебное приглашение</title>
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-
 body{
-background:#000;
-color:#d4af37;
-font-family:'Cormorant Garamond',serif;
-overflow-x:hidden;
-scroll-behavior:smooth;
+    margin:0;
+    font-family: 'Georgia', serif;
+    background:#111;
+    color:#fff;
+    text-align:center;
 }
 
-/* ===== 3D КОНВЕРТ ===== */
+/* ================= КОНВЕРТ ================= */
 
 #envelopeScreen{
-position:fixed;
-width:100%;
-height:100%;
-background:#000;
-display:flex;
-justify-content:center;
-align-items:center;
-z-index:9999;
-perspective:1200px;
-transition:1s;
+    position:fixed;
+    width:100%;
+    height:100vh;
+    background:#0d0d0d;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    z-index:10000;
+    transition:1s ease;
+}
+
+.envelope-wrapper{
+    perspective:1000px;
+    cursor:pointer;
 }
 
 .envelope{
-width:350px;
-height:220px;
-position:relative;
-transform-style:preserve-3d;
-cursor:pointer;
-transition:1s;
+    position:relative;
+    width:340px;
+    height:220px;
+    background:#1a1a1a;
+    border:2px solid #d4af37;
+    overflow:hidden;
 }
 
-.envelope-body{
-position:absolute;
-width:100%;
-height:100%;
-background:#111;
-border:2px solid #d4af37;
-box-shadow:0 0 40px rgba(212,175,55,0.3);
-}
-
-.flap{
-position:absolute;
-width:100%;
-height:110px;
-background:#111;
-border:2px solid #d4af37;
-transform-origin:top;
-transition:1.2s;
-}
-
-.envelope.open .flap{
-transform:rotateX(180deg);
-}
-
+/* Письмо */
 .letter{
-position:absolute;
-width:90%;
-height:85%;
-top:7%;
-left:5%;
-background:#000;
-border:1px solid #d4af37;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-text-align:center;
-padding:20px;
+    position:absolute;
+    width:90%;
+    height:90%;
+    background:#fff;
+    left:5%;
+    top:5%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:#000;
+    font-size:18px;
+    transform:translateY(100%);
+    transition:1.2s ease;
+    z-index:1;
 }
 
-/* ===== СЕКЦИИ ===== */
-
-section{
-min-height:100vh;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-text-align:center;
-padding:60px 20px;
-position:relative;
-background:linear-gradient(180deg,#000 0%,#0b0b0b 100%);
-overflow:hidden;
+/* Крышка */
+.flap{
+    position:absolute;
+    width:100%;
+    height:100%;
+    background:#111;
+    clip-path:polygon(0 0, 50% 60%, 100% 0);
+    transform-origin:top;
+    transition:1s ease;
+    z-index:2;
 }
 
-section::before{
-content:"";
-position:absolute;
-width:100%;
-height:100%;
-background:
-radial-gradient(circle at 30% 20%, rgba(212,175,55,0.08), transparent 60%),
-radial-gradient(circle at 70% 80%, rgba(212,175,55,0.08), transparent 60%);
-pointer-events:none;
+/* Анимация */
+.envelope.open .flap{
+    transform:rotateX(180deg);
+}
+
+.envelope.open .letter{
+    transform:translateY(-20%);
+}
+
+/* ================= ОСНОВНОЙ КОНТЕНТ ================= */
+
+.main-content{
+    padding:80px 20px;
 }
 
 h1{
-font-size:64px;
-letter-spacing:4px;
+    font-size:40px;
+    color:#d4af37;
 }
 
-h2{
-font-size:42px;
-margin-bottom:20px;
-position:relative;
+.timer{
+    font-size:24px;
+    margin-top:30px;
 }
 
-h2::after{
-content:"";
-width:140px;
-height:1px;
-background:#d4af37;
-position:absolute;
-bottom:-10px;
-left:50%;
-transform:translateX(-50%);
-}
-
-p{
-max-width:750px;
-font-size:22px;
-line-height:1.6;
-color:#eee;
-}
-
-/* ===== ФОТО СЕКЦИИ ===== */
-
-.hero{
-background:url("PHOTO1.jpg") center/cover no-repeat;
-position:relative;
-}
-
-.location{
-background:url("PHOTO2.jpg") center/cover no-repeat;
-position:relative;
-}
-
-.hero::after,
-.location::after{
-content:"";
-position:absolute;
-top:0;left:0;
-width:100%;height:100%;
-background:rgba(0,0,0,0.6);
-}
-
-/* ===== ТАЙМЕР ===== */
-
-.calendar{
-display:flex;
-gap:25px;
-flex-wrap:wrap;
-margin-top:40px;
-}
-
-.calendar-box{
-width:140px;
-padding:25px 15px;
-border:1px solid rgba(212,175,55,0.4);
-background:rgba(255,255,255,0.05);
-border-radius:12px;
-transition:0.5s;
-}
-
-.calendar-box span{
-font-size:40px;
-color:#fff;
-display:block;
-}
-
-/* ===== КНОПКА ===== */
-
-button{
-margin-top:40px;
-padding:14px 40px;
-border:1px solid #d4af37;
-background:transparent;
-color:#d4af37;
-font-size:18px;
-cursor:pointer;
-transition:0.4s;
-}
-
-button:hover{
-background:#d4af37;
-color:#000;
-}
-
-footer{
-padding:40px;
-color:#777;
-}
-</style>
-</head>
-
-<body>
-
-<div id="envelopeScreen">
-<div class="envelope" onclick="openEnvelope()">
-<div class="flap"></div>
-<div class="envelope-body"></div>
-<div class="letter">
-<h2>Максим & Дарья</h2>
-<p>06 июня 2026</p>
-<small>Нажмите, чтобы открыть</small>
-</div>
-</div>
-</div>
-
-<!-- 🎵 Музыка -->
-<audio id="bgMusic" loop preload="auto">
-  <source src="music.mp3" type="audio/mpeg">
-</audio>
-
-<button id="musicBtn" style="
+/* Кнопка музыки */
+#musicBtn{
 position:fixed;
 bottom:20px;
 right:20px;
@@ -235,48 +108,44 @@ color:#d4af37;
 border:1px solid #d4af37;
 cursor:pointer;
 z-index:999;
-">
-Включить музыку
-</button>
+}
 
-<section class="hero">
-<h1>Максим & Дарья</h1>
-<p>06 июня 2026 • Одесса</p>
-</section>
+</style>
+</head>
 
-<section>
-<h2>С любовью приглашаем</h2>
-<p>Мы будем счастливы видеть вас рядом в самый важный день нашей жизни.</p>
-</section>
+<body>
 
-<section>
-<h2>До нашей свадьбы осталось</h2>
-<div class="calendar">
-<div class="calendar-box"><span id="days"></span>Дней</div>
-<div class="calendar-box"><span id="hours"></span>Часов</div>
-<div class="calendar-box"><span id="minutes"></span>Минут</div>
-<div class="calendar-box"><span id="seconds"></span>Секунд</div>
+<!-- Музыка -->
+<audio id="bgMusic" loop preload="auto">
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+
+<button id="musicBtn">Включить музыку</button>
+
+<!-- Экран с конвертом -->
+<div id="envelopeScreen">
+  <div class="envelope-wrapper" onclick="openEnvelope()">
+    <div class="envelope">
+      <div class="letter">
+        Нажмите, чтобы открыть приглашение
+      </div>
+      <div class="flap"></div>
+    </div>
+  </div>
 </div>
-</section><section class="location">
-<h2>Место проведения</h2>
-<p>Ресторан «У бабушки» • Одесса • 19:00</p>
-</section>
 
-<section>
-<h2>Дресс-код</h2>
-<p>Элегантные вечерние образы в классическом стиле.</p>
-</section>
+<!-- Основной контент -->
+<div class="main-content">
+    <h1>6 июня 2026</h1>
+    <p>Мы будем счастливы видеть вас на нашей свадьбе</p>
 
-<section>
-<h2>Подтвердите присутствие</h2>
-<button onclick="window.location.href='ВАША_ССЫЛКА_GOOGLE_FORMS'">
-Перейти к подтверждению
-</button>
-</section>
-
-<footer>
-Максим & Дарья • 06.06.2026
-</footer>
+    <div class="timer">
+        <span id="days"></span> дней
+        <span id="hours"></span> часов
+        <span id="minutes"></span> минут
+        <span id="seconds"></span> секунд
+    </div>
+</div>
 
 <script>
 
@@ -285,7 +154,6 @@ const musicBtn = document.getElementById("musicBtn");
 
 music.volume = 0.5;
 
-// Кнопка запуска
 musicBtn.addEventListener("click", function(){
     music.play().then(()=>{
         musicBtn.innerText = "Музыка играет";
@@ -294,18 +162,19 @@ musicBtn.addEventListener("click", function(){
     });
 });
 
-// Конверт
 function openEnvelope(){
 
 document.querySelector(".envelope").classList.add("open");
 
 setTimeout(()=>{
-document.getElementById("envelopeScreen").style.opacity="0";
-setTimeout(()=>{
-document.getElementById("envelopeScreen").style.display="none";
-},1000);
-},1200);
+    document.getElementById("envelopeScreen").style.opacity="0";
+    setTimeout(()=>{
+        document.getElementById("envelopeScreen").style.display="none";
+    },1000);
+},1400);
 
+music.play();
+musicBtn.innerText = "Музыка играет";
 }
 
 // Таймер
@@ -322,7 +191,6 @@ document.getElementById("seconds").innerHTML=Math.floor((distance%(1000*60))/100
 },1000);
 
 </script>
+
 </body>
 </html>
-
-
